--- a/mobilescreen.css
+++ b/mobilescreen.css
@@ -1,16 +1,15 @@
+@media screen and (max-width: 300px){
+  .proj-desc p, .proj-desc button{font-size: 10%;}
+  .sub_class h1{font-size: xx-small;}
+}
+
 @media screen and (max-width: 350px){
-  .proj-desc p, .proj-desc button{
-    font-size: small;
-  }
+  .proj-desc p ,.proj-desc button{font-size: 50%;}
 }
 
 @media screen and (max-width: 400px){
-    .header{
-      width: fit-content;
-    }
-    ::-webkit-scrollbar {
-      width: 0em;
-    }
+    .header{width: fit-content;}
+    ::-webkit-scrollbar {width: 0em;}
     .sub_class {
       font-size: small;
       letter-spacing: .1em;
@@ -18,23 +17,14 @@
       padding: .5em;
       border-radius: .5em;
     }
-    .page h1{
-    font-size: medium;
-    }
-    .proj-desc {
-      font-size: medium;
-    }
-    
-    
+    .page h1{font-size: medium;}
+    .proj-desc p, .proj-desc button{font-size: 70%;}
+   
 }
 
 @media screen and (max-width: 500px){
-  .header{
-    width: fit-content;
-  }
-  ::-webkit-scrollbar {
-    width: 0em;
-  }
+  .header{width: fit-content;}
+  ::-webkit-scrollbar {width: 0em;}
   .sub_class {
     font-size: small;
     letter-spacing: .1em;
@@ -42,34 +32,23 @@
     padding: 1em;
     border-radius: .5em;
   }
-  .back {
-      font-size: smaller;
-    }
-  .page h1{
-  font-size: medium;
-  }
+  .back {font-size: smaller;}
+  .page h1{font-size: medium;}
   
-  .proj-desc {
-  font-size: large;
-  }
+  .proj-desc {font-size: large;}
   .project-1{
     height: 70%;
     width: 100%;
     margin-bottom: 1em;
     perspective: 60em;
   }
-  .Luke{
-    display: unset;
-  }
+  .Luke{display: unset;}
 }
 
 @media screen and (min-width: 700px){
   .card{
      height: 9em;
      width: 9em;
-  }
-  #email p{
-     font-size: x-small;
   }
 }
 
