--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ html{
 .container {
   width: fit-content;
   background-color: transparent;
+  
   margin: 1em;
   transform-style: preserve-3d;
   border-radius: .5em;
@@ -90,6 +91,7 @@ html{
 
 .container:hover {
   transform: rotateZ(360deg);
+  text-shadow: 0 0 5px white;
   box-shadow: 0px 0px 10px white;
   transition: transform .5s;
 }
@@ -111,7 +113,7 @@ html{
 .css {background-color: #2196F3; padding: 1em;}
 .js {background-color: rgb(255, 92, 32); padding: 1em;}
 .django {background-color: rgb(55, 129, 55); padding: 1em;}
-.java {background-color: rgb(255, 217, 0); padding: 1em; color:rgb(21, 3, 3)} 
+.java {background-color: rgb(255, 217, 0); padding: 1em;} 
 .sql {background-color: rgb(59, 59, 255); padding: 1em;}
 .bootstrap {background-color: rgb(137, 62, 137); padding: 1em;}
 
@@ -247,9 +249,9 @@ html{
 
 .proj-desc button:hover{
   background-color: crimson;
-  color: lavender;
-  transition: .5s;
   box-shadow: 0px 0px 5px crimson;
+  transition: .5s;
+  
 }
 
 .Luke {
@@ -264,9 +266,7 @@ html{
   scroll-margin-top: 9em;
 }
 
-#email_card, #linkedin_card, #github_card{
-  box-shadow: inset 0px 0px 10px lavender;
-}
+
 
 .myBtn {
   position: fixed;
@@ -279,8 +279,8 @@ html{
 }
 
 .myBtn img{
-  width: 9em;
-  height: 8em;
+  width: 7em;
+  height: 6em;
   opacity: 0.5;
   transition: .5s;
 }
@@ -325,6 +325,7 @@ html{
   text-shadow: 0 0 5px white;
   background-color: rgb(190, 166, 244);
   box-shadow: 0 0 10px rgb(190, 166, 244);
+ 
   border: None;
   border-radius: 50%;
   height: 2em;
