--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ html{
 }
 
 ::-webkit-scrollbar {
-    width: 1em;
+    width: .5em;
   }
   
   ::-webkit-scrollbar-track {
@@ -185,12 +185,13 @@ html{
   height: 10em;
   display: flex;
   margin-right: 1em;
+  border-radius: .5em;
 }
 
 .project-1 img{
   height: 100%;
   width: 100%;
-  border-radius: 1em;
+  border-radius: .5em;
 }
 
 .proj-flip{
@@ -211,13 +212,13 @@ html{
 
 .proj-img, .proj-desc{
   position: absolute;
-  border-radius: 1em;
+  border-radius: .5em;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
 }
 .proj-img {
-  background-image: radial-gradient( rgb(34, 10, 55), rgb(34, 10, 55), indigo);
+  background-color: black;
 }
 
 .proj-desc {
@@ -230,6 +231,7 @@ html{
   font-size: medium;
   background-color: white;
   box-shadow: lavender;
+  overflow-y: scroll;
 }
 .proj-desc p, .proj-desc button{
   margin: .5em;
