--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 html{
     background-image: linear-gradient( rgb(21, 3, 63), black);
     scroll-behavior: smooth;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Academy Engraved LET;
 }
 
 /* the header/navigation bar */
