--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html{
 .header {
     background-color: transparent;
     box-shadow: inset 0px 100px 100px rgb(21, 3, 63);
-    filter: blur(5px);
+    -webkit-backdrop-filter: blur(1px);
     margin: 0vw;
     border-radius: 1vw;
     position: sticky;
@@ -24,7 +24,7 @@ html{
 
 /* makes the header/nav visible and changes the color on hover */
 .header:hover{
-    filter: blur(0px);
+  -webkit-backdrop-filter: blur(5px);
     background-color: rgb(174, 18, 49);
     box-shadow: inset 0px -150px 100px rgb(21, 3, 63);
     margin: auto;
@@ -98,74 +98,16 @@ html{
   transition: 1s;
 }
 
-/* the name card in the about me section */
 .card {
-  background-color: transparent;
-  perspective: 30vw;
-  width: 23vw;
-  height: 23vw;
-  margin-left: 34.9vw;
-  margin-bottom: 12vh;
+  display: flex;
+  justify-content: center;
 }
 
-/* the card picture on the front */
-.card img{
-  width: 100%;
-  height: 100%;
-}
-
-/* the box that the card sits in */
-.card-flip {
-  position: relative;
-  width: 100%;
-  height: 100%;
+.moon{
   border-radius: 50%;
-  transition: transform 2s;
-  transform-style: preserve-3d;
-  font-size: 1vw;
-}
-
-/* flips the card on hover */
-.card:hover .card-flip{
-  transform: rotateY(540deg);
-}
-
-
-
-/* the front and back of the card */
-.front, .back{
-  position: absolute;
-  border-radius: 50%;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-
-/* front of the card */
-.front{
-  background-color: rgb(21, 3, 63);
-  box-shadow: inset -5vw 5vw 5vw crimson;
-}
-
-/* the teddy bear icon in the middle of the card */
-.mid{
-  transform: rotateY(90deg);
-}
-
-.mid button{
-  background-color: transparent;
-  border: 0vw;
-  cursor: pointer;
-}
-
-/* the back of the card */
-.back{
-  transform: rotateY(180deg);
-  margin: 0vw;
-  padding: 0vw;
-  width: 100%;
-  height: 100%;
-  text-align: center;
+  width: 22vw;
+  height: 22vw;
+  padding: 1vw;
   font-size: 1.6vw;
   color:rgb(21, 3, 63);
   background-color: white;
@@ -237,9 +179,6 @@ html{
 .container p:hover {
   /* box-shadow: inset 0px 0px 10px white; */
   transition: .5s;
-  -webkit-backdrop-filter: blur(10px);
-  border-color: initial;
-  border-style: solid;
 }
 
 /* the individaul colors of the skills */
@@ -285,7 +224,6 @@ html{
   border-radius: 1vw;
   transition: transform .5s;
   transform-style: preserve-3d;
-  /* box-shadow: 0px 0px .1vw lavender; */
 }
 
 /* flips the project card on hover */
@@ -307,6 +245,9 @@ html{
   background-color: black;
 }
 
+.mid {
+  transform: rotateY(90deg);
+}
 /* the back of the project card (description) */
 .proj-desc {
   transform: rotateY(180deg);
@@ -445,6 +386,7 @@ html{
 
 #contact a{
   text-decoration: none;
+
 }
 /* contacts link buttons */
 #contact button{
