--- a/style.css
+++ b/style.css
@@ -187,11 +187,11 @@ html{
 #python {color: rgb(0, 255, 255);}
 #git {color: rgb(255, 97, 150);}
 #html {color: rgb(255, 123, 0);}
-#css {color: rgb(34, 200, 255);}
+#css {color: rgb(157, 204, 255);}
 #js {color: rgb(255, 204, 0);}
 #django {color: rgb(0, 255, 0);}
 #java {color: yellow;} 
-#sql {color: blue;}
+#sql {color: rgb(0, 191, 255);}
 #bootstrap {color: purple;}
 #spring {color: rgb(83, 211, 86);}
 
